# Smarthome-Assistant-App

./: .gitignore  ANALYSIS.md  IMPROVEMENTS.md  README.md  REFERENCES.md  TESTS.md
SmarthomeAssistant_android_mvp/: .gitignore  gradle.properties
SmarthomeAssistant_android_mvp/app/: proguard-rules.pro
android_app/: README.md  build.gradle.kts  settings.gradle.kts
android_app/app/: build.gradle.kts
smarthome_core/: README.md  README_GATEWAY.md  llama_openai_bridge.py  pyproject.toml  requirements_gateway.txt
smarthome_core/lexicon/: colors_v1.json
smarthome_core/registry/: device_registry_v1.json
smarthome_core/smarthome_core/: __init__.py  eval_tools.py  llm_client.py  parser_llm.py  pipeline.py  schema_utils.py  text_normalize.py  validator.py
smarthome_core/smarthome_gateway/: main.py
smarthome_core/tests/: conftest.py  test_ha_adapter.py  test_llm_parser_wiring.py  test_parser_against_gold.py  test_pipeline_smoke.py  test_validator_against_gold.py
smarthome_core_v1_haexec_brightnessfix/: README.md  debug_parser.py  debug_wrapper.py  patch_areas.py  patch_insert_ensure.py  patch_insert_helper.py  patch_parser.py  patch_parser2.py  patch_parser3.py  patch_parser4.py  patch_parser5.py  patch_parser6.py  patch_replace_clar_block.py  show_block.py  show_block2.py  show_block3.py  test_apply.py  test_area.py  test_cmd.py  test_llm.py  test_llm_context.py  test_rules.py  which_module.py
smarthome_core_v1_haexec_brightnessfix/lexicon/: area_synonyms_v1.json  modifiers_v1.json
smarthome_core_v1_haexec_brightnessfix/schemas/: parsed_command_v1.schema.json  (+1 more)
(+30 files in other folders)
